# meta_oxide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_COMPLETE.md  Cargo.toml  FORMATS_ANSWER.md  GITHUB_SETUP.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  PUBLICATION_CHECKLIST.md  PUBLISHING_GUIDE.md  README.md  REPRIORITIZATION_SUMMARY.md  SETUP_SUMMARY.md  TEAM_ROLES.md  pyproject.toml
.claude/agents/: staff-python-engineer.md  staff-rust-engineer.md  technical-writer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
bindings/csharp/MetaOxide/: MetaOxide.csproj
bindings/java/meta-oxide-java/: pom.xml
bindings/node/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
bindings/node/__tests__/: index.test.js
bindings/node/src/: lib.rs
bindings/python/tests/: test_basic.py  test_dublin_core.py  test_error_handling.py  test_hadr.py  test_hfeed.py  test_hgeo.py  test_hproduct.py  test_hrecipe.py  test_hrecipe_integration.py  test_hreview.py  test_integration.py  test_jsonld.py  test_jsonld_aggregaterating.py  test_jsonld_audioobject.py  test_jsonld_book.py  test_jsonld_breadcrumb.py  test_jsonld_course.py  test_jsonld_event.py  test_jsonld_faqpage.py  test_jsonld_howto.py  test_jsonld_imageobject.py  test_jsonld_jobposting.py  test_jsonld_localbusiness.py  test_jsonld_movie.py  test_jsonld_musicrecording.py  test_jsonld_recipe.py  test_jsonld_review.py  test_jsonld_softwareapplication.py  test_jsonld_tvseries.py  test_jsonld_video.py  test_jsonld_website.py  test_meta.py  test_microdata.py  test_oembed.py  test_pwa_mobile.py  test_real_world.py  test_rel_links.py  test_social.py  test_stress_and_edge_cases.py  test_type_conversions_meta.py  (+3 more)
bindings/wasm/: Cargo.toml  package.json
docs/: COMPLETE_FORMAT_CHECKLIST.md  FORMATS.md  FORMAT_SUMMARY.md  README.md  ROADMAP.md  api-reference.md  architecture.md  development.md  examples.md  getting-started.md
examples/: basic_usage.py
include/: meta_oxide.h
meta_oxide/: Cargo.toml  build.rs
meta_oxide/src/: errors.rs  ffi.rs  lib.rs  parser.rs
meta_oxide/src/extractors/: mod.rs
meta_oxide/src/extractors/dublin_core/: mod.rs  tests.rs
meta_oxide/src/extractors/jsonld/: mod.rs  tests.rs
meta_oxide/src/extractors/manifest/: mod.rs  tests.rs
meta_oxide/src/extractors/meta/: mod.rs  tests.rs
meta_oxide/src/extractors/microdata/: mod.rs  tests.rs
meta_oxide/src/extractors/microformats/: hadr.rs  hcard.rs  hentry.rs  hevent.rs  hfeed.rs  hgeo.rs  hproduct.rs  hrecipe.rs  hreview.rs  hreview.rs.backup  mod.rs
meta_oxide/src/extractors/oembed/: mod.rs  tests.rs
meta_oxide/src/extractors/rdfa/: mod.rs  tests.rs
meta_oxide/src/extractors/rel_links/: mod.rs
meta_oxide/src/extractors/social/: mod.rs  opengraph.rs  opengraph_tests.rs  twitter.rs  twitter_tests.rs
meta_oxide/src/macros/: microformat.rs  mod.rs  py_bindings.rs  py_bindings_example.rs
meta_oxide/src/types/: manifest.rs  meta.rs  microdata.rs  mod.rs  oembed.rs  rdfa.rs
python/tests/: test_basic.py
scripts/: publish.sh
src/: errors.rs  lib.rs  parser.rs  types.rs
src/extractors/: common.rs  hcard.rs  hentry.rs  hevent.rs  mod.rs
src/types/: dublin_core.rs  jsonld.rs  manifest.rs  microdata.rs  microformats.rs  rdfa.rs  social.rs
